Fix spacing, margin issues

--- a/_sass/jsblog.scss
+++ b/_sass/jsblog.scss
@@ -37,7 +37,7 @@ $heavy-font-weight: 600 !default;
 $base-line-height: 1.5 !default;
 
 // Spacing/Padding
-$spacing-unit: 15px !default;
+$spacing-unit: 20px !default;
 $page-content-padding: 80px !default;
 
 // Colors
